==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/i2c_api.c <==
#include "i2c_api.h"
#include "lp_ticker_api.h"
#include "object_owners.h"
#include "pinmap_ex.h"
#include "PeripheralPins.h"
#include "nrfx_twi.h"
#include "app_util_platform.h"
#include "prs/nrfx_prs.h"
#include "nrfx_twis.h"
#define TWI_PIN_INIT(_pin) nrf_gpio_cfg((_pin),                     \
                                        NRF_GPIO_PIN_DIR_INPUT,     \
                                        NRF_GPIO_PIN_INPUT_CONNECT, \
                                        NRF_GPIO_PIN_PULLUP,        \
                                        NRF_GPIO_PIN_S0D1,          \
                                        NRF_GPIO_PIN_NOSENSE)
#define DEBUG_PRINTF(...) printf(__VA_ARGS__)
#define DEBUG_PRINTF(...)
#define MAXIMUM_TIMEOUT_US (10000)  // timeout for waiting for RX/TX
#define I2C_READ_BIT 0x01           // read bit

void i2c_init(i2c_t *obj, PinName sda, PinName scl)
{
    DEBUG_PRINTF("i2c_init: %p %d %d\r\n", obj, sda, scl);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    const ticker_info_t *ti = lp_ticker_get_info();
    tick2us = 1000000 / ti->frequency;

    /* Get instance from pin configuration. */
    int instance = pin_instance_i2c(sda, scl);
    MBED_ASSERT(instance < NRFX_TWI_ENABLED_COUNT);

    /* Initialize i2c_t object */
    config->instance = instance;
    config->sda = sda;
    config->scl = scl;
    config->frequency = NRF_TWI_FREQ_100K;
    config->state = NORDIC_TWI_STATE_IDLE;
    config->mode = NORDIC_I2C_MODE_NONE;

#if DEVICE_I2C_ASYNCH
    config->handler = 0;
    config->event = 0;
    config->mask = 0;
#endif

#if DEVICE_I2CSLAVE
    /** was_slave is used to decide which driver call we need
     * to use when uninitializing a given instance
     */
    config->was_slave = false;
    config->is_slave = false;
    config->slave_addr = 0;
#endif

    /* Force reconfiguration */
    config->update = true;

    static bool first_init = true;

    if (first_init) {
        first_init = false;

        /* Register interrupt handlers in driver with the NVIC. */
        NVIC_SetVector(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn, (uint32_t) SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQHandler);
        NVIC_SetVector(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn, (uint32_t) SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQHandler);
    }
}

void i2c_frequency(i2c_t *obj, int hz)
{
    DEBUG_PRINTF("i2c_frequency: %p %d\r\n", obj, hz);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif


#if DEVICE_I2CSLAVE
    /* Slaves automatically get frequency from master, may be 100kHz or 400kHz */
    if(config->is_slave) {
    		return;
    }
#endif

    /* Round down to nearest valid frequency. */
    nrf_twi_frequency_t new_frequency;

    if (hz < 250000) {
        new_frequency = NRF_TWI_FREQ_100K;
    } else if (hz < 400000) {
        new_frequency = NRF_TWI_FREQ_250K;
    } else {
        new_frequency = NRF_TWI_FREQ_400K;
    }

    /* Only store frequency in object. Configuration happens at the beginning of each transaction. */
    config->frequency = new_frequency;
    config->update = true;
}

int i2c_start(i2c_t *obj)
{
    DEBUG_PRINTF("i2c_start: %p\r\n", obj);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    /* Change state but defer actual signaling until the first byte (the address)
       is transmitted. This is due to hardware limitations.
    */
    config->state = NORDIC_TWI_STATE_START;

    return 0;
}

int i2c_byte_write(i2c_t *obj, int data)
{
    DEBUG_PRINTF("i2c_byte_write: %p %d\r\n", obj, data);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    NRF_TWI_Type *p_twi = nordic_nrf5_twi_register[config->instance];
    int result = 1; // default to ACK
    uint32_t start_us, now_us, timeout;

    if (config->state == NORDIC_TWI_STATE_START) {
        config->state = NORDIC_TWI_STATE_BUSY;

        config->update = true;
        i2c_configure_twi_instance(obj);

        if (data & I2C_READ_BIT) {
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_STOPPED);
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_RXDREADY);
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_ERROR);
            (void)nrf_twi_errorsrc_get_and_clear(p_twi);

            nrf_twi_shorts_set(p_twi, NRF_TWI_SHORT_BB_SUSPEND_MASK);

            nrf_twi_address_set(p_twi, data >> 1);
            nrf_twi_task_trigger(p_twi, NRF_TWI_TASK_RESUME);
            nrf_twi_task_trigger(p_twi, NRF_TWI_TASK_STARTRX);
        } else {
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_STOPPED);
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_TXDSENT);
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_ERROR);
            nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_BB);
            (void)nrf_twi_errorsrc_get_and_clear(p_twi);

            nrf_twi_shorts_set(p_twi, 0);

            nrf_twi_address_set(p_twi, data >> 1);
            nrf_twi_task_trigger(p_twi, NRF_TWI_TASK_RESUME);
            nrf_twi_task_trigger(p_twi, NRF_TWI_TASK_STARTTX);
        }
        /* Wait two byte duration for address ACK */
        timeout = 2 * byte_timeout(config->frequency);
    } else {
        nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_TXDSENT);
        nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_ERROR);
        nrf_twi_event_clear(p_twi, NRF_TWI_EVENT_BB);
        (void)nrf_twi_errorsrc_get_and_clear(p_twi);

        nrf_twi_task_trigger(p_twi, NRF_TWI_TASK_RESUME);
        nrf_twi_txd_set(p_twi, data);
        /* Wait ten byte duration for data ACK */
        timeout = 10 * byte_timeout(config->frequency);
    }

    start_us = tick2us * lp_ticker_read();
    now_us = start_us;

    /* Block until timeout or an address/data error has been detected. */
    while (((now_us - start_us) < timeout) &&
            !nrf_twi_event_check(p_twi, NRF_TWI_EVENT_TXDSENT) &&
            !nrf_twi_event_check(p_twi, NRF_TWI_EVENT_ERROR)) {
        now_us = tick2us * lp_ticker_read();
    }

    /* Check error register and update return value if an address/data NACK was detected. */
    uint32_t error = nrf_twi_errorsrc_get_and_clear(p_twi);

    if ((error & NRF_TWI_ERROR_ADDRESS_NACK) || (error & NRF_TWI_ERROR_DATA_NACK)) {
        result = 0; // NACK
    } else if (now_us - start_us >= timeout) {
        result = 2; // timeout
    }

    return result;
}

int i2c_byte_read(i2c_t *obj, int last)
{
    DEBUG_PRINTF("i2c_byte_read: %p %d\r\n", obj, last);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    int instance = config->instance;
    int retval = I2C_ERROR_NO_SLAVE;

    /* Due to hardware limitations, the stop condition must triggered through a short before
     * reading the last byte.
     */
    if (last) {
        nrf_twi_shorts_set(nordic_nrf5_twi_register[instance], NRF_TWI_SHORT_BB_STOP_MASK);

        /* Transaction will be complete after this call, reset state. */
        config->state = NORDIC_TWI_STATE_IDLE;
    }

    /* Due to the way events are generated, if a byte is available it should be read directly
     * but without resuming reading. Otherwise the TWI will read one byte too many.
     */
    if (nrf_twi_event_check(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_RXDREADY)) {
        retval = nrf_twi_rxd_get(nordic_nrf5_twi_register[instance]);
        nrf_twi_event_clear(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_RXDREADY);
    } else {

        /* No data available, resume reception. */
        nrf_twi_task_trigger(nordic_nrf5_twi_register[instance], NRF_TWI_TASK_RESUME);

        /* Wait ten byte duration for data */
        uint32_t timeout = 10 * byte_timeout(config->frequency);
        /* Setup timeout */
        uint32_t start_us = tick2us * lp_ticker_read();
        uint32_t now_us = start_us;

        /* Block until timeout or data ready event has been signaled. */
        while (((now_us - start_us) < timeout) &&
                !(nrf_twi_event_check(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_RXDREADY))) {
            now_us = tick2us * lp_ticker_read();
        }

        /* Retrieve data from buffer. */
        if ((now_us - start_us) < timeout) {
            retval = nrf_twi_rxd_get(nordic_nrf5_twi_register[instance]);
            nrf_twi_event_clear(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_RXDREADY);
        }
    }

    return retval;
}

int i2c_stop(i2c_t *obj)
{
    DEBUG_PRINTF("i2c_stop: %p\r\n", obj);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    int instance = config->instance;

    /* Set explicit stop signal. */
    nrf_twi_event_clear(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_STOPPED);
    nrf_twi_task_trigger(nordic_nrf5_twi_register[instance], NRF_TWI_TASK_STOP);

    /* Block until stop signal has been generated. */
    uint32_t start_us = tick2us * lp_ticker_read();
    uint32_t now_us = start_us;

    while (((now_us - start_us) < MAXIMUM_TIMEOUT_US) &&
            !(nrf_twi_event_check(nordic_nrf5_twi_register[instance], NRF_TWI_EVENT_STOPPED))) {
        now_us = tick2us * lp_ticker_read();
    }

    /* Reset state. */
    config->state = NORDIC_TWI_STATE_IDLE;

    return 0;
}

int i2c_read(i2c_t *obj, int address, char *data, int length, int stop)
{
    DEBUG_PRINTF("i2c_read: %p %d %p %d %d\r\n", obj, address, data, length, stop);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    int instance = config->instance;
    int result = I2C_ERROR_NO_SLAVE;

    /* Force peripheral configuration to avoid timing errors. */
    config->update = true;
    i2c_configure_driver_instance(obj);

    /* Initialize transaction. */
    ret_code_t retval = nrfx_twi_rx(&nordic_nrf5_instance[instance],
                                    address >> 1,
                                    (uint8_t *) data,
                                    length);

    /* Set return value on success. */
    if (retval == NRF_SUCCESS) {
        result = length;
    }

    DEBUG_PRINTF("result: %lu %d\r\n", retval, result);

    return result;
}

int i2c_write(i2c_t *obj, int address, const char *data, int length, int stop)
{
    DEBUG_PRINTF("i2c_write: %p %d %p %d %d\r\n", obj, address, data, length, stop);

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    int instance = config->instance;
    int result = I2C_ERROR_NO_SLAVE;

    /* Force peripheral configuration to avoid timing errors. */
    config->update = true;
    i2c_configure_driver_instance(obj);

    /* Initialize transaction. */
    ret_code_t retval = nrfx_twi_tx(&nordic_nrf5_instance[instance],
                                    address >> 1,
                                    (const uint8_t *) data,
                                    length,
                                    !stop);

    /* Set return value on success. */
    if (retval == NRF_SUCCESS) {
        result = length;
    }

    DEBUG_PRINTF("result: %lu %d\r\n", retval, result);

    return result;
}

void i2c_slave_mode(i2c_t *obj, int enable_slave)
{
#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    /* Reconfigure this instance as an I2C slave */

    /* Not configured yet, so this instance is and was a slave */
    if(config->state == NRFX_DRV_STATE_UNINITIALIZED) {
    		config->was_slave = enable_slave;
    } else {
        config->was_slave = config->is_slave;
    }
    config->is_slave = enable_slave;
    config->update = true;

    i2c_configure_driver_instance(obj);

    DEBUG_PRINTF("i2c_slave_mode\r\n");
}

int i2c_slave_receive(i2c_t *obj)
{
    DEBUG_PRINTF("i2c_slave_receive\r\n");

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    const nrfx_twis_t* twis_instance = &nordic_nrf5_twis_instance[config->instance];

    if(nrfx_twis_is_waiting_rx_buff(twis_instance)) {
    		return 3;
    }

    if(nrfx_twis_is_waiting_tx_buff(twis_instance)) {
    		return 1;
    }

    return 0;
}

int i2c_slave_read(i2c_t *obj, char *data, int length)
{
    DEBUG_PRINTF("i2c_slave_read\r\n");

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    const nrfx_twis_t* twis_instance = &nordic_nrf5_twis_instance[config->instance];

    /* Wait until the master is trying to write data */
    while(!nrfx_twis_is_waiting_rx_buff(twis_instance)) { }

    /* Master is attempting to write, now we prepare the rx buffer */
    nrfx_twis_rx_prepare(twis_instance,
    		data,
		length);

    /* Wait until the transaction is over */
    while(nrfx_twis_is_pending_rx(twis_instance)) { }

    return nrfx_twis_rx_amount(twis_instance);
}

int i2c_slave_write(i2c_t *obj, const char *data, int length)
{
    DEBUG_PRINTF("i2c_slave_write\r\n");

#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    const nrfx_twis_t* twis_instance = &nordic_nrf5_twis_instance[config->instance];

    /* Wait until the master is trying to read data */
    while(!nrfx_twis_is_waiting_tx_buff(twis_instance)) { }

    /* Master is attempting to read, now we prepare the tx buffer */
    nrfx_twis_tx_prepare(twis_instance,
    		data,
		length);

    /* Wait until the transaction is over */
    while(nrfx_twis_is_pending_tx(twis_instance)) { }

    return nrfx_twis_tx_amount(twis_instance);
}

void i2c_slave_address(i2c_t *obj, int idx, uint32_t address, uint32_t mask)
{
#if DEVICE_I2C_ASYNCH
    struct i2c_s *config = &obj->i2c;
#else
    struct i2c_s *config = obj;
#endif

    /* Reconfigure this instance as an I2C slave with given address */
    config->update = true;
    config->slave_addr = (uint8_t) address;

    i2c_configure_driver_instance(obj);

    DEBUG_PRINTF("i2c_slave_address\r\n");
}
